content/_generated-doc/2.7/config/quarkus-liquibase-mongodb.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-liquibase-mongodb_configuration]]link:#quarkus-liquibase-mongodb_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log[quarkus.liquibase-mongodb.change-log]`

[.description]
--
The change log file
--|string 
|`db/changeLog.xml`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.migrate-at-start]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.migrate-at-start[quarkus.liquibase-mongodb.migrate-at-start]`

[.description]
--
The migrate at start flag
--|boolean 
|`false`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.validate-on-migrate]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.validate-on-migrate[quarkus.liquibase-mongodb.validate-on-migrate]`

[.description]
--
The validate on update flag
--|boolean 
|`true`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.clean-at-start]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.clean-at-start[quarkus.liquibase-mongodb.clean-at-start]`

[.description]
--
The clean at start flag
--|boolean 
|`false`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.contexts]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.contexts[quarkus.liquibase-mongodb.contexts]`

[.description]
--
The list of contexts
--|list of string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.labels]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.labels[quarkus.liquibase-mongodb.labels]`

[.description]
--
The list of labels
--|list of string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-catalog-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-catalog-name[quarkus.liquibase-mongodb.default-catalog-name]`

[.description]
--
The default catalog name
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-schema-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-schema-name[quarkus.liquibase-mongodb.default-schema-name]`

[.description]
--
The default schema name
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-catalog-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-catalog-name[quarkus.liquibase-mongodb.liquibase-catalog-name]`

[.description]
--
The liquibase tables catalog name
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-schema-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-schema-name[quarkus.liquibase-mongodb.liquibase-schema-name]`

[.description]
--
The liquibase tables schema name
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-tablespace-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-tablespace-name[quarkus.liquibase-mongodb.liquibase-tablespace-name]`

[.description]
--
The liquibase tables tablespace name
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log-parameters-change-log-parameters]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log-parameters-change-log-parameters[quarkus.liquibase-mongodb.change-log-parameters]`

[.description]
--
The parameters to be passed to the changelog. Defined as key value pairs.
--|`Map<String,String>` 
|

|===